fixed auth and db issue
